--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,43 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.219
+head: 1.223
 branch:
 locks: strict
+	gilles: 1.223
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 219;	selected revisions: 219
+total revisions: 223;	selected revisions: 223
 description:
+----------------------------
+revision 1.223	locked by: gilles;
+date: 2007/06/15 04:08:44;  author: gilles;  state: Exp;  lines: +7 -7
+Domino 7.0.1
+Exchange 6.5.7638.1
+----------------------------
+revision 1.222
+date: 2007/06/10 17:49:12;  author: gilles;  state: Exp;  lines: +17 -11
+Added Deerfield VisNetic MailServer 5.8.6 [from] success.
+      33 different imap server softwares are (well) supported.
+
+Added Dovecot 1.0.0 [dest] success.
+
+Added requires Date::Manip in case --syncinternaldates is used (will
+      be a use Date::Manip in future releases if this fix is a
+      really good one). This date rewrite was needed by
+      Deerfield VisNetic bug (it sends the timestamp with
+      one digit, not two (and dovecot 1.0.0 is not tolerant).
+
+Added paypal address at the end of execution.
+----------------------------
+revision 1.221
+date: 2007/05/29 13:09:18;  author: gilles;  state: Exp;  lines: +9 -9
+Turn to --nofastio1 --nofastio2 by default.
+----------------------------
+revision 1.220
+date: 2007/05/25 02:15:59;  author: gilles;  state: Exp;  lines: +7 -6
+Flags \Recent can be uppercase \RECENT now.
 ----------------------------
 revision 1.219
 date: 2007/04/04 09:32:20;  author: gilles;  state: Exp;  lines: +18 -12
