--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.10 2006/05/28 15:18:33 gilles Exp gilles $
+# $Id: INSTALL,v 1.11 2007/06/11 04:08:51 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -28,7 +28,9 @@ You need :
 Here is some individual module help:
 
 - Perl Mail::IMAPClient module 
-  try : perl -mMail::IMAPClient -e ''
+  try : 
+
+  perl -mMail::IMAPClient -e ''
   
   Get the Mail::IMAPClient module here:
   http://search.cpan.org/
@@ -37,6 +39,7 @@ Here is some individual module help:
   
   In fact I use Mail-IMAPClient-2.2.9 (debian package)
   To know the version you have on your system try :
+
   perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
 
 - Perl Digest::MD5 module. 
@@ -47,9 +50,13 @@ Here is some individual module help:
   I use 2.20 (debian package)
 
 - Term::ReadKey
+  perl -mTerm::ReadKey -e ''
 
 - IO:Socket:SSL.pm
   perl -mIO::Socket::SSL -e ''
+
+- Date::Manip
+  perl -mDate::Manip -e ''
 
 - (Option) Perl Digest::HMAC_MD5 module
   Good for non plain text password over network.
