--- a/TODO
+++ b/TODO
@@ -1,6 +1,17 @@
 TODO file for imapsync
 ----------------------
 
+Add a --tmpdir option.
+
+Fix bug with folder names starting with an asterisk: *Archiv
+Sending: 220 SELECT *Archiv/Support/foobar
+Read: 220 BAD Protokollfehler: "Invalid folder specified in SELECT command"
+
+Add automatic convertion or detection  when 
+separator inversion produces an invalid character.
+From uw to cyrus, for example :
+FoldA/FoldB.ext ->  FoldA.FoldB/ext
+
 Compare speed between 1.182 and 1.217
 "un mailbox de 90MB, ~2400 fichiers prends 80s avec la version 1.182 
 vs 250s avec la version 1.217". Marc Jauvin
