--- a/README
+++ b/README
@@ -2,7 +2,7 @@
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.219 $
+    $Revision: 1.223 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -209,7 +209,7 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 32 imap servers (softwares
+    Success stories reported with the following 33 imap servers (softwares
     names are in alphabetic order) :
 
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
@@ -227,16 +227,17 @@ IMAP SERVERS
      - David Tobit V8 (proprietary Message system).
      - DBMail 1.2.1, 2.0.4, 2.0.9, 2.2rc1 (GPL) (http://www.dbmail.org/).
        2.0.7 seems buggy.
-     - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7 (LGPL) 
-       (http://www.dovecot.org/)
-     - Domino (Notes) 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1
+     - Deerfield VisNetic MailServer 5.8.6 [from]
+     - Dovecot 0.99.10.4, 0.99.14, 0.99.14-8.fc4, 1.0-0.beta2.7, 
+       1.0.0 [dest] (LGPL) (http://www.dovecot.org/)
+     - Domino (Notes) 6.5, 5.0.6, 5.0.7, 7.0.2, 6.0.2CF1, 7.0.1 [from]
      - Eudora WorldMail v2
      - Groupwise IMAP (Novell) 6.x and 7.0. Buggy so see the FAQ.
      - iPlanet Messaging server 4.15, 5.1, 5.2
      - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MDaemon 7.0.1, 8.1, 9.5.4 (Windows server 2003 R2 platform)
      - Mercury 4.1 (Windows server 2000 platform)
-     - Microsoft Exchange Server 5.5
+     - Microsoft Exchange Server 5.5, 6.5.7638.1 [dest]
      - Netscape Mail Server 3.6 (Wintel !)
      - Netscape Messaging Server 4.15 Patch 7
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
@@ -271,7 +272,8 @@ IMAP SERVERS
 
     Please rate imapsync at http://freshmeat.net/projects/imapsync/ or
     better give the author a book, he likes books:
-    http://www.amazon.com/gp/registry/wishlist/1C9UNDIH3P7R7/
+    http://www.amazon.com/gp/registry/wishlist/1C9UNDIH3P7R7/ (or its paypal
+    account gilles.lamiral@laposte.net)
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
@@ -319,5 +321,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.219 2007/04/04 09:32:20 gilles Exp $
+    $Id: imapsync,v 1.223 2007/06/15 04:08:44 gilles Exp gilles $
 
