--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,45 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.233
+head: 1.239
 branch:
 locks: strict
-	gilles: 1.233
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 233;	selected revisions: 233
+total revisions: 239;	selected revisions: 239
 description:
 ----------------------------
-revision 1.233	locked by: gilles;
+revision 1.239
+date: 2007/12/29 02:44:10;  author: gilles;  state: Exp;  lines: +7 -7
+Typo if
+----------------------------
+revision 1.238
+date: 2007/12/29 02:41:52;  author: gilles;  state: Exp;  lines: +15 -10
+Fixed --version exit bug with Test::More
+----------------------------
+revision 1.237
+date: 2007/12/29 02:15:35;  author: gilles;  state: Exp;  lines: +10 -15
+check_lib_version() rewrote and reused.
+----------------------------
+revision 1.236
+date: 2007/12/29 01:54:27;  author: gilles;  state: Exp;  lines: +215 -38
+Removed bad warning about ssl
+Started to be IMAPClient 3.0.0 compliant
+Fixed bad --include behavior (added already added folders)
+Started unit tests.
+Rockliffe Mailsite 4.5.6
+Courier 4.1.1
+----------------------------
+revision 1.235
+date: 2007/11/10 02:52:29;  author: gilles;  state: Exp;  lines: +7 -5
+wonko_imapsync link
+----------------------------
+revision 1.234
+date: 2007/10/30 15:34:06;  author: gilles;  state: Exp;  lines: +55 -32
+Remove every else else between braces } else {
+----------------------------
+revision 1.233
 date: 2007/10/30 03:20:53;  author: gilles;  state: Exp;  lines: +69 -7
 Added connect2() to replace buggy connect() with bad hostname.
 ----------------------------
