--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 32 different IMAP server softwares supported with success.
 
-    $Revision: 1.233 $
+    $Revision: 1.239 $
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
@@ -179,6 +179,12 @@ BUGS
     No known serious bug. Report any bug to the author. Before reporting
     bugs, read the FAQ, this README and the TODO files.
 
+    Don't write imapsync in uppercase in the email title, I'll know you run
+    windows.
+
+    Make a good title, not just "imapsync" or "problem", a good title is
+    made of keywords summary, not too long (one visible line).
+
     In your report, please include:
 
      - imapsync version.
@@ -209,12 +215,13 @@ IMAP SERVERS
      - dkimap4 2.39
      - Imail 7.04 (maybe).
 
-    Success stories reported with the following 34 imap servers (softwares
+    Success stories reported with the following 35 imap servers (softwares
     names are in alphabetic order) :
 
+     - Archiveopteryx 2.03, 2.04 (OSL 3.0) http://www.archiveopteryx.org/
      - BincImap 1.2.3 (GPL) (http://www.bincimap.org/)
      - CommuniGatePro server (Redhat 8.0)
-     - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8 (GPL) 
+     - Courier IMAP 1.5.1, 2.2.0, 2.1.1, 2.2.1, 3.0.8, 3.0.3, 4.1.1 (GPL) 
        (http://www.courier-mta.org/)
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.1.18 
@@ -245,7 +252,7 @@ IMAP SERVERS
      - OpenMail IMAP server B.07.00.k0 (Samsung Contact ?)
      - OpenWave
      - Qualcomm Worldmail (NT)
-     - Rockliffe Mailsite 5.3.11
+     - Rockliffe Mailsite 5.3.11, 4.5.6
      - Samsung Contact IMAP server 8.5.0
      - Scalix v10.1, 10.0.1.3, 11.0.0.431
      - SmarterMail
@@ -257,7 +264,7 @@ IMAP SERVERS
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
-     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 5.5.
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 5.5.
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -320,9 +327,10 @@ SIMILAR SOFTWARES
       imapcopy      : http://home.arcor.de/armin.diehl/imapcopy/imapcopy.html
       migrationtool : http://sourceforge.net/projects/migrationtool/
       imapmigrate   : http://sourceforge.net/projects/cyrus-utils/
+      wonko_imapsync: http://wonko.com/article/554
       pop2imap      : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.233 2007/10/30 03:20:53 gilles Exp gilles $
+    $Id: imapsync,v 1.239 2007/12/29 02:44:10 gilles Exp $
 
