--- a/TODO
+++ b/TODO
@@ -1,6 +1,30 @@
 TODO file for imapsync
 ----------------------
 
+Normally, "no header used or found" means imapsync found a message
+with no header. It may be a bad message with really no header
+or it may be a imap server problem, the server gives no header
+for this message. In that case imapsync gets the whole message
+to see if there is the same on the other side. It slows the transfer
+of course. I think I'll change imapsync behavior and let it 
+give up those bad messages missing an header.
+
+
+Add a --delete2folders option
+"When syncing mailboxes with imapsync, is there a way to delete folders in the
+target account? The --delete2 option only seems to delete individual
+messages, not folders."
+
+
+Fix the buggy --include behavior with no --folder --folderrec or --subscribed.
+
+make --syncinternaldates turn on by default
+
+Add different level of output to see clearly the
+problem by default.
+
+Check imapsync with gmail (dates problem?). 
+
 Add --justlogin --justlogin1 --justlogin2 options
 to check username and passwort.
 
