--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,62 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.223
+head: 1.233
 branch:
 locks: strict
-	gilles: 1.223
+	gilles: 1.233
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 223;	selected revisions: 223
+total revisions: 233;	selected revisions: 233
 description:
 ----------------------------
-revision 1.223	locked by: gilles;
+revision 1.233	locked by: gilles;
+date: 2007/10/30 03:20:53;  author: gilles;  state: Exp;  lines: +69 -7
+Added connect2() to replace buggy connect() with bad hostname.
+----------------------------
+revision 1.232
+date: 2007/10/30 01:41:17;  author: gilles;  state: Exp;  lines: +24 -23
+Added imapmigrate link (cyrus-utils)
+Checked each SIMILAR SOFTWARES link and fixed bad ones.
+Courier IMAP 3.0.8 success
+Fixed Mail::IMAPClient version output.
+----------------------------
+revision 1.231
+date: 2007/10/30 00:28:40;  author: gilles;  state: Exp;  lines: +12 -11
+bug fix avoid append_file2 on MSWin32, not the opposite :-)
+----------------------------
+revision 1.230
+date: 2007/10/30 00:01:34;  author: gilles;  state: Exp;  lines: +14 -9
+Added bug fix to MSWin32 system and append_file2() problem.
+----------------------------
+revision 1.229
+date: 2007/10/29 23:02:46;  author: gilles;  state: Exp;  lines: +15 -11
+Added OS name in --help
+----------------------------
+revision 1.228
+date: 2007/10/29 22:49:07;  author: gilles;  state: Exp;  lines: +8 -8
+Added DBMail 0.9 failure.
+Commented lib_version check.
+----------------------------
+revision 1.227
+date: 2007/10/20 02:30:31;  author: gilles;  state: Exp;  lines: +7 -6
+GMX IMAP4 StreamProxy success.
+----------------------------
+revision 1.226
+date: 2007/10/20 01:33:34;  author: gilles;  state: Exp;  lines: +11 -9
+Updated help message about --authuser : avoid --authmech1 SOMETHING
+----------------------------
+revision 1.225
+date: 2007/08/21 03:04:08;  author: gilles;  state: Exp;  lines: +10 -6
+Uppercase authmech input.
+----------------------------
+revision 1.224
+date: 2007/08/16 23:54:26;  author: gilles;  state: Exp;  lines: +9 -10
+Ubuntu package.
+Date with minus %d-%b-%Y
+----------------------------
+revision 1.223
 date: 2007/06/15 04:08:44;  author: gilles;  state: Exp;  lines: +7 -7
 Domino 7.0.1
 Exchange 6.5.7638.1
