--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.11 2007/06/11 04:08:51 gilles Exp gilles $
+# $Id: INSTALL,v 1.12 2007/10/30 00:49:03 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -73,6 +73,16 @@ To install imapsync, just run:
 make install
 
 or copy the file imapsync where you want it to be.
+
+WINDOWS
+-------
+
+- Install Perl if it isn't already installed.
+  ActivePerl from ActiveState is a good candidate if
+  you understand nothing at free/open software
+  and want to run imapsync with success.
+- Use PPM to install modules listed in the PREREQUISITES section.
+  PPM is Perl Package Manager.
 
 TESTING
 -------
