--- a/TODO
+++ b/TODO
@@ -1,6 +1,22 @@
 TODO file for imapsync
 ----------------------
 
+Add --justlogin --justlogin1 --justlogin2 options
+to check username and passwort.
+
+Change IsUnconnected behavior. If IsUnconnected then print
+stats and die. Avoid logout.
+
+Add --subscribeall option.
+Is it possible to have a option that subscribes all folders regardless of
+subscription on the source server? Perhaps --subscribeall?
+
+Add stdin/stdout filter before transfer:
+"Now i asked me, how to modify your perl program to work with
+that - in example, to write each mail to stdout, pipe that to the
+convertion program, and read the result from stdin - and this all before
+the mail will transfer to the target imap-server"
+
 Add a --tmpdir option.
 
 Fix bug with folder names starting with an asterisk: *Archiv
